config/profile/rhdh/default-config/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backstage-psql # placeholder for 'backstage-psql-<cr-name>'
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: # placeholder for 'backstage-psql-<cr-name>'
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 5432
          protocol: TCP
  egress:
    # DNS resolution only (standard and mDNS)
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
